# bytebabel

./: .env.example  ByteBabel.spec  README.md  pyproject.toml
assets/: icon.icns
helpers/: system_audio_capture  system_audio_capture.swift
scripts/: build.py  make_icon.py
src/bytebabel/: __init__.py  app.py  config.py  logger.py  main.py  permissions.py
src/bytebabel/audio/: __init__.py  base.py  devices.py  system.py
src/bytebabel/transcription/: __init__.py  soniox.py
src/bytebabel/ui/: logs.py  session_bar.py  settings.py  sidebar.py  theme.py  toolbar.py  viewer.py  window.py
